# config-stash

./: .buildinfo  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  Missing.md  README.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  TEST_STATUS.md  base.yaml  base_config.yaml  config-stash.example.yaml  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  override.json  overview.html  prod_overrides.yaml  py-modindex.html  pyproject.toml  pyright_errors  quickstart.html  requirements-dev.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  tox.ini
.claude/: settings.local.json
.devcontainer/: Dockerfile  README2.md  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: localstack-init.sh  post-create.sh  post-start.sh  setup-localstack.sh
.doctrees/: contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  overview.doctree  quickstart.doctree
.doctrees/api/: async_config.doctree  cli.doctree  config.doctree  config_builder.doctree  config_diff.doctree  config_versioning.doctree  exceptions.doctree  index.doctree  introspection.doctree  loaders.doctree  merge_strategies.doctree  observability.doctree  secret_stores.doctree  validators.doctree
.doctrees/user_guide/: advanced_features.doctree  configuration_sources.doctree  index.doctree  secret_stores.doctree  validation.doctree
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html
_modules/config_stash/: async_config.html  config.html  config_builder.html  config_diff.html  config_introspection.html  config_versioning.html  exceptions.html  merge_strategies.html  observability.html
_modules/config_stash/loaders/: env_file_loader.html  environment_loader.html  ini_loader.html  json_loader.html  loader.html  remote_loader.html  ssm_loader.html  toml_loader.html  yaml_loader.html
_modules/config_stash/secret_stores/: base.html  resolver.html
_modules/config_stash/validators/: pydantic_validator.html  schema_validator.html
_sources/: contributing.rst.txt  index.rst.txt  overview.rst.txt
_sources/api/: cli.rst.txt  merge_strategies.rst.txt  observability.rst.txt  validators.rst.txt
_sources/user_guide/: secret_stores.rst.txt  validation.rst.txt
api/: async_config.html  cli.html  config.html  config_builder.html  config_diff.html  config_versioning.html  exceptions.html  index.html  introspection.html  loaders.html  merge_strategies.html  observability.html  secret_stores.html  validators.html
docs/: MIGRATION_GUIDE.md  SECRET_STORES.md  VAULT_AUTHENTICATION.md
docs/source/: conf.py  examples.rst  installation.rst  quickstart.rst
docs/source/api/: async_config.rst  config.rst  config_builder.rst  config_diff.rst  config_versioning.rst  exceptions.rst  index.rst  introspection.rst  loaders.rst  observability.rst  secret_stores.rst
docs/source/user_guide/: advanced_features.rst  configuration_sources.rst  index.rst
examples/: advanced_features.py  async_example.py  basic_usage.py  config_management.py  extensibility.py  introspection_api.py  loaders_showcase.py  secret_store_example.py  typed_config.py  validation_example.py  vault_auth_examples.py  working_demo.py
requirements/: README.md
scripts/: clean_before_commit.sh
src/config_stash/: __init__.py  async_config.py  attribute_accessor.py  cli.py  config.py  config_access.py  config_builder.py  config_composition.py  config_debug.py  config_diff.py  config_extender.py  config_introspection.py  config_loader.py  config_loading.py  config_merger.py  config_observability_mixin.py  config_reader.py  config_validation_mixin.py  config_versioning.py  config_watcher.py  enhanced_source_tracker.py  environment_handler.py  exceptions.py  exporters.py  file_tracker.py  hook_processor.py  ide_support.py  loader_manager.py  merge_strategies.py  observability.py  plugin_loader.py  secret_factory.py  source_factory.py  source_tracker.py  vault_resolver.py
src/config_stash/hooks/: env_var_expander.py  type_casting.py
src/config_stash/loaders/: __init__.py  env_file_loader.py  environment_loader.py  ini_loader.py  json_loader.py  loader.py  remote_loader.py  ssm_loader.py  toml_loader.py  yaml_loader.py
src/config_stash/secret_stores/: __init__.py  base.py  resolver.py
src/config_stash/utils/: dict_utils.py  format_parser.py  lazy_loader.py  toml_compat.py  type_coercion.py
src/config_stash/validators/: __init__.py  pydantic_validator.py  schema_validator.py
src/cs/: __init__.py  async_config.py  config_diff.py  config_versioning.py  merge_strategies.py
src/cs/hooks/: __init__.py
src/cs/loaders/: __init__.py
src/cs/secret_stores/: __init__.py
src/cs/utils/: __init__.py
tests/: test_async_config.py  test_attribute_accessor.py  test_bug_exposures.py  test_cli.py  test_cli_commands.py  test_config.py  test_config_diff.py  test_config_extender.py  test_config_introspection.py  test_config_loader.py  test_config_merger.py  test_config_reader.py  test_config_stash_file.py  test_config_versioning.py  test_config_watcher.py  test_cs_alias.py  test_deep_merge_comprehensive.py  test_docs_generator.py  test_enhanced_source_tracker.py  test_env_file_loader.py  test_env_switcher.py  test_environment_handler.py  test_environment_loader_separator.py  test_exporters.py  test_file_tracker.py  test_hook_processor.py  test_ide_support.py  test_ini_loader.py  test_integration_workflows.py  test_lazy_loader.py  test_loaders.py  test_merge_strategies.py  test_new_features.py  test_observability.py  test_on_change_callbacks.py  test_override.py  test_readme_examples.py  test_real_world_integration.py  test_secret_factory.py  test_secret_stores.py  (+5 more)
tests/benchmarks/: __init__.py  test_performance.py
tests/test_loaders/: test_cloud_storage_loaders.py  test_remote_loader.py
tests/test_validators/: test_pydantic_validator.py  test_schema_validator.py
user_guide/: advanced_features.html  configuration_sources.html  index.html  secret_stores.html  validation.html
(+27 files in other folders)
