[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-stash"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/config-stash#readme"
Issues = "https://github.com/U.N. Owen/config-stash/issues"
Source = "https://github.com/U.N. Owen/config-stash"

[tool.hatch.version]
path = "src/config_stash/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/config_stash tests}"

[tool.coverage.run]
source_pkgs = ["config_stash", "tests"]
branch = true
parallel = true
omit = [
  "src/config_stash/__about__.py",
]

[tool.coverage.paths]
config_stash = ["src/config_stash", "*/config-stash/src/config_stash"]
tests = ["tests", "*/config-stash/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
